# kimm_se3_planner_ros_interface

./: CMakeLists.txt  package.xml
launch/: client.launch  server.launch
msg/: SE3Action.msg
python_client/: example.py
src/: planner.cpp  se3_planner_server.cpp
srv/: action_se3_path.srv  plan_se3_path.srv
