<?xml version="1.0"?>
<package format="2">
  <name>kimm_se3_planner_ros_interface</name>
  <version>0.0.0</version>
  <description>The kimm_se3_planner_ros_interface package</description>

  <maintainer email="kim87@kimm.re.kr">Sanghyun Kim</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kimm_hqp_controller</depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
